--- a/page-styles.css
+++ b/page-styles.css
@@ -227,7 +227,6 @@ img:not(.extraImage) {
     #textHalf {
         width: 100%;
         height: auto;
-        scrollbar-gutter: stable;
         overflow-y: auto;
         margin-bottom: 5px;
     }
@@ -239,5 +238,9 @@ img:not(.extraImage) {
 
     #starmap {
         width: 90%;
+    }
+
+    #scrollPad {
+        margin-right: 0;
     }
 }
