more more CSS changes...

--- a/page-styles.css
+++ b/page-styles.css
@@ -4,14 +4,12 @@
     padding: 0;
     margin: 0;
     min-width: 100%;
-    -webkit-overflow-scrolling: touch;
 }
 
 #mainBoxContent {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    -webkit-overflow-scrolling: touch;
 }
 
 #textHalf {
@@ -19,7 +17,7 @@
     height: calc(100vh - 60px);
     scrollbar-gutter: stable;
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: none;
 }
 
 #scrollPad {
@@ -34,7 +32,7 @@
     width: 50%;
     height: calc(100vh - 60px);
     overflow: scroll;
-    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: none;
 }
 
 #starmap {
@@ -228,6 +226,7 @@ img:not(.extraImage) {
         height: 100%;
         width: 100%;
         overflow: auto;
+        overscroll-behavior: none;
     }
 
     #mainBoxContent {
@@ -237,13 +236,13 @@ img:not(.extraImage) {
     }
 
     #textHalf {
-        width: 100%;
+        width: 95%;
         height: auto;
         margin-bottom: 5px;
     }
 
     #backgroundHalf {
-        width: 100%;
+        width: 95%;
         height: fit-content;
     }
 
@@ -256,10 +255,10 @@ img:not(.extraImage) {
     }
 
     #latestSongCover {
-        width: 90%;
+        width: 4.8em;
     }
 
     #latestGameCover {
-        width: 90%;
+        width: 4.8em;
     }
 }
